src/objects/Assignment__c.object
<CustomObject>
    <description>Mapping of Resource to Project</description>
    <fields>
        <fullName>Currently_Assigned__c</fullName>
        <description>Is today between Start and End dates?</description>
        <formula>IF(AND(Start_Date__c &lt;= TODAY(), End_Date__c &gt;= TODAY()) , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currently Assigned?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of this assignment (e.g., Design, development)</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hourly_Cost__c</fullName>
        <description>Internal cost of the assigned resource</description>
        <label>Hourly Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <description>Rate at which the assigned resource is billed out</description>
        <label>Hourly Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Cost__c</fullName>
        <description>Expected cost of this assignment, equal to Total Hours multiplied by Hourly Cost</description>
        <formula>Total_Hours__c * Hourly_Cost__c</formula>
        <label>Planned Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Margin__c</fullName>
        <description>Expected margin from this assignment, equal to Planned Cost minus Planned Revenue</description>
        <formula>Planned_Revenue__c - Planned_Cost__c</formula>
        <label>Planned Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Revenue__c</fullName>
        <description>Expected revenue from this assignment, equal to Total Hours multiplied by Hourly Rate</description>
        <formula>Total_Hours__c * Hourly_Rate__c</formula>
        <label>Planned Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Proj__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role of the resource on this project (e.g., Developer, Instructor)</description>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tentative</fullName>
                    <default>true</default>
                    <label>Tentative</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <description>Number of hours to be worked during this assignment</description>
        <label>Total Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Assignment</label>
    <nameField>
        <displayFormat>{MMDDYYYY}-{000}</displayFormat>
        <label>Assignment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>